--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Aleksandr Panteleev",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^3.17.0",
+    "eslint-config-airbnb-base": "^11.1.1",
+    "eslint-plugin-import": "^2.2.0",
     "jasmine": "^2.5.3",
     "jasmine-core": "^2.5.2",
     "karma": "^1.5.0",
